# workplace_converter

./: .gitignore  README.md  data_analysis_notebook.ipynb  dev_api_notebook.ipynb  dev_notebook.ipynb  generate_fake_names.py  meta_workplace_api_converter.py  meta_workplace_api_converter_with_memory.py  meta_workplace_api_converter_with_memory_gemini.py  meta_workplace_converter.py  note.md  pyproject.toml
