[project]
name = "workplace-converter"
version = "0.1.0"
description = ""
authors = [
    {name = "Jack-tai",email = "jack@traffyk.ai"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "xlsxwriter (>=3.2.2,<4.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "polars (>=1.26.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
